[package]
name = "robot_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
cdr = "0.2.4"
serde = "1.0.136"
serde_derive = "1.0.136"
futures = "0.3.21"
cfg-if = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh"}
crossbeam = "0.8"

[dev-dependencies]
rand = "0.8.5"
async-std = { version = "=1.11.0", default-features = false, features = [
    "attributes",
] }
