[package]
name = "robot_node"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
cdr = "0.2.4"
serde = "1.0.136"
serde_derive = "1.0.136"
futures = "0.3.21"
cfg-if = "1"
zenoh = { version = "0.6.0-beta.1", default-features = false, features = [
    "transport_tcp",
] }

[dev-dependencies]
rand = "0.8.5"
