[package]
name = "zenoh_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh" }
cdr = "0.2.4"
serde = "1.0.136"
serde_derive = "1.0.136"
futures = "0.3.21"

[dev-dependencies]
rand = "0.8.5"
async-std = { version = "=1.11.0", default-features = false, features = [
    "attributes",
] }